--- a/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
+++ b/Lucuber/ViewControllers/FormulaDetail/FormulaDetail.storyboard
@@ -11,7 +11,7 @@
         <!--Formula Detail View Controller-->
         <scene sceneID="dUP-Ml-dDP">
             <objects>
-                <viewController hidesBottomBarWhenPushed="YES" id="Nc2-BK-DNv" customClass="FormulaDetailViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FormulaDetailViewController" hidesBottomBarWhenPushed="YES" id="Nc2-BK-DNv" customClass="FormulaDetailViewController" customModule="Lucuber" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="to8-7L-17K"/>
                         <viewControllerLayoutGuide type="bottom" id="e43-8T-pBD"/>
@@ -52,7 +52,7 @@
                 <viewControllerPlaceholder storyboardName="Comment" id="uzE-JB-UEH" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JDJ-hl-aRx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="639" y="161"/>
+            <point key="canvasLocation" x="636" y="161"/>
         </scene>
     </scenes>
 </document>
